force-app/main/default/objects/HDT_AppointmentSetting__mdt/validationRules/CampiObbligatoriMap.validationRule-meta.xml
<ValidationRule>
    <fullName>CampiObbligatoriMap</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c,&apos;Map Heroku&apos;),ISBLANK(Value2__c))</errorConditionFormula>
    <errorMessage>Attenzione! Per questo tipo di record è obbligatorio valorizzare i campi Value1 e Value2.</errorMessage>
</ValidationRule>